--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "ocpp-websocket-server",
   "version": "1.0.0",
   "type": "module",
-  "engines": {
-    "node": ">=18"
-  },
+  "engines": { "node": ">=18" },
   "dependencies": {
     "ws": "^8.18.0",
     "@base44/sdk": "^0.8.6"
