--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
   "name": "ocpp-websocket-server",
   "version": "1.0.0",
-  "type": "module",
-  "engines": {
-    "node": ">=18"
-  },
-  "dependencies": {
-    "ws": "^8.18.0",
-    "@base44/sdk": "^0.8.6"
-  },
   "scripts": {
-    "start": "node server.js"
+    "start": "deno run --allow-net --allow-env server.js"
   }
 }
