--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "ocpp-websocket-server",
   "version": "1.0.0",
+  "type": "module",
+  "engines": { "node": ">=18" },
+  "dependencies": {
+    "ws": "^8.18.0"
+  },
   "scripts": {
-    "start": "deno run --allow-net --allow-env server.js"
+    "start": "node server.js"
   }
 }
